@@ -1,3 +1,9 @@
+2007-01-06 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b47
+
+ Fix: Empty line after ?> in AlbumDB.php
+
+ Fix: User changed could not be saved.
+
 2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b46
 
  Change: Patch #1023146
